# holly-grace

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.production  Dockerfile.production.dockerignore  Dockerfile.sandbox  OPERATION_CONTROL_TOWER.md  OPERATION_OFFICE_WEEK_FAILURE_MODES.md  README.md  docker-compose.yml  pyproject.toml  run_all_tests.ps1
.claude/commands/: audit.md  next.md
.github/workflows/: build-and-push.yml
console/: docker-compose.yml
console/aws/: .gitignore  alb.tf  database.tf  deploy.sh  ecr.tf  ecs.tf  frontend.tf  main.tf  outputs.tf  secrets.tf  variables.tf
console/backend/: Dockerfile  pyproject.toml  start.ps1
console/backend/app/: config.py  main.py
console/backend/app/models/: graph.py  health.py
console/backend/app/routers/: agents.py  approvals.py  auth.py  autonomy.py  costs.py  evaluations.py  execution.py  graph.py  health.py  hierarchy.py  im.py  mcp.py  morphogenetic.py  scheduler.py  system.py  tools.py  tower.py  traces.py  workflows.py
console/backend/app/services/: ecom_client.py  event_bridge.py  graph_introspection.py  langsmith_service.py  provider_costs.py
console/frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
deploy/: entrypoint.sh  nginx-production.conf  supervisord.conf  task-definition.json
docs/: ARCHITECTURE.md  CODE_GOVERNANCE.md  CODE_WRITE_TESTING.md  Component_Behavior_Specs_SIL3.md  DECISIONS.md  Design_Methodology_v1.0.docx  Dev_Environment_Spec.md  Development_Procedure_Graph.md  Goal_Hierarchy_Formal_Spec.md  ICD_v0.1.md  INTERACTION.md  OPERATIONS.md  RADAR.md  ROADMAP.md  Task_Manifest.md  Test_Governance_Spec.md  status.yaml
docs/architecture/: Artifact_Genealogy.md  GANTT.mermaid  GANTT_critical.mermaid  GATE_REPORT_S1.md  GATE_REPORT_S2.md  PROGRESS.md  RTD_0.1.0.4.mermaid  SAD_0.1.0.5.mermaid
docs/audit/: AGC-2026-02-17-001_results.md  Artifact_Genealogy_Checklist.md  control_library.csv  finding_register.csv  phase_d_gate_report.md  phase_f_gate_report.md  waiver_register.csv
docs/tla/: KernelInvariants.cfg  KernelInvariants.tla  KernelInvariants_ModelCheck.md
goal-hierarchy/modules/: solana-mining.md
holly/agents/: contract_verifier.py
holly/arch/: audit.py  ci_gate.py  cli.py  decorators.py  dependencies.py  extract.py  gantt_validator.py  gate_report.py  manifest_parser.py  registry.py  rtm.py  sad_parser.py  scanner.py  schema.py  topology.py  tracker.py
holly/engine/: __init__.py  goal_dispatch.py  mcp_registry.py  phase_f_gate.py  workflow_engine.py
holly/goals/: __init__.py  aps_validator.py  assembly_index.py  classification.py  predicates.py
holly/kernel/: __init__.py  dissimilar.py  dissimilar_sm.py  exceptions.py  icd_schema_registry.py  k1.py  k2.py  k6.py  k7.py  memory.py  permission_registry.py  schema_registry.py  state_machine.py
holly/safety/: __init__.py  governance.py  phase_transition.py
holly/sandbox/: __init__.py  container.py
holly/storage/: partition_manager.py  postgres.py  rls_boundary.py
holly/validation/: __init__.py  model_validator.py
src/: __init__.py  agent_registry.py  approval.py  dynamic_executor.py  graph.py  serve.py  state.py  tool_registry.py  workflow_registry.py
src/agents/: __init__.py  operations.py  orchestrator.py  revenue.py  sales_marketing.py  sub_agents.py
src/aps/: store.py
src/hierarchy/: __init__.py  engine.py  models.py  observer.py  seed.py  store.py
src/holly/: agent.py  autonomy.py  prompts.py  session.py  tools.py
src/im/: __init__.py  engine.py  models.py  store.py  tools.py
src/llm/: __init__.py  config.py  fallback.py  router.py
src/mcp/: __init__.py  jsonschema.py  manager.py  naming.py  routes.py  stdio_client.py  store.py  tool_adapter.py
src/memory/: __init__.py  long_term.py  medium_term.py  short_term.py
src/morphogenetic/: cascade.py
src/resilience/: __init__.py  (+2 more)
tests/: conftest.py  mcp_echo_server.py  test_api_costs_mcp.py  test_autonomy_control.py  test_aws_ecs_mcp.py  test_code_change_workflow.py  test_crew.py  test_deploy_workflow.py  test_github_writer_mcp.py  test_graph.py  test_hierarchy_engine.py  test_hierarchy_models.py  test_hierarchy_seed.py  test_holly_autonomy.py  test_holly_eyes.py  test_holly_introspection.py  test_holly_ops_tools.py  test_im_engine.py  test_im_models.py  test_im_tools.py  test_kernel_memory.py  test_mcp_jsonschema_to_pydantic.py  test_mcp_stdio_sync_and_call.py  test_mcp_tool_id_naming.py  test_memory.py  test_orchestrator.py  test_reliability.py  test_revenue_seed.py  test_router.py  test_sandbox_container.py  test_shopify_analytics_mcp.py  test_solana_mining_module.py  test_solana_workflow.py  test_tool_registry_mcp_merge.py  test_tools.py  test_tower_interrupt.py  test_tower_smoke.py
(+125 files in other folders)
